--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "CongressLib"
-version = "0.1.0"
+version = "0.1.1"
 description = "A Python wrapper for the Congress.gov API."
 authors = [
-    {name = "Ziyu He", email = "zih028@ucsd.edu"}
+    {name = "Harry He", email = "zih028@ucsd.edu"}
 ]
 license = {text = "MIT"}
 
@@ -17,6 +17,12 @@ dependencies = [
     "typing-extensions"
 ]
 readme = "README.md"
+keywords = ["Congress", "politics", "government", "legislation"]
+
+[project.urls]
+Repository = "https://github.com/harryziyuhe/CongressLib"
+Issues = "https://github.com/harryziyuhe/CongressLib/issues"
+
 [tool.setuptools]
 package-dir = {"" = "src"}
 
